# libjxl-tiny

./: .gitmodules  .readthedocs.yaml  CMakeLists.txt  README.md  bash_test.sh  ci.sh  deps.sh
.github/workflows/: build_test.yml  release.yaml
cmake/: FindAtomics.cmake  FindBrotli.cmake  FindHWY.cmake
doc/: coding_tools.md  coding_tools.md~  data_flow.dot
doc/tables/: all_tables.sh
docker/: build.sh
docker/scripts/: emsdk_install.sh  jpegxl_builder.sh  msan_install.sh  qemu_install.sh
encoder/: CMakeLists.txt  ac_context.h  ac_strategy.cc  ac_strategy.h  ans_common.cc  ans_common.h  ans_params.h  chroma_from_luma.cc  chroma_from_luma.h  cjxl_main.cc  cmdline.cc  cmdline.h  codestream_header.h  coeff_order.h  coeff_order_fwd.h  color_encoding.h  color_encoding_internal.cc  color_encoding_internal.h  color_management.h  common.h  config.h  context_predict.h  convolve-inl.h  convolve.h  convolve_separable5.cc  convolve_separable7.cc  convolve_slow.cc  convolve_symmetric3.cc  convolve_symmetric5.cc  dc_group_data.h  dct-inl.h  dct_block-inl.h  dct_scales.cc  dct_scales.h  dct_util.h  dec_bit_reader.h  dec_context_map.h  dec_huffman.h  dec_noise.h  dec_transforms-inl.h  (+82 more)
encoder/base/: bits.h  byte_order.h  cache_aligned.cc  cache_aligned.h  compiler_specific.h  data_parallel.cc  data_parallel.h  override.h  padded_bytes.cc  padded_bytes.h  printf_macros.h  profiler.h  random.h  sanitizer_definitions.h  span.h  status.h
encoder/modular/: modular_image.cc  modular_image.h  options.h
encoder/modular/encoding/: context_predict.h  dec_ma.h  enc_encoding.cc  enc_encoding.h  enc_ma.cc  enc_ma.h  encoding.cc  encoding.h  ma_common.h
encoder/modular/transform/: transform.cc  transform.h
examples/: CMakeLists.txt  decode_exif_metadata.cc  decode_oneshot.cc  decode_progressive.cc  encode_oneshot.cc
experimental/fast_lossless/: build-android.sh  build.sh  fast_lossless.cc  fast_lossless.h  fast_lossless_main.cc  pam-input.h
lib/: CMakeLists.txt  jxl.cmake  jxl_benchmark.cmake  jxl_extras.cmake  jxl_profiler.cmake  jxl_tests.cmake  jxl_threads.cmake  lib.gni
lib/extras/: codec.cc  codec.h  codec_test.cc  exif.cc  hlg.cc  packed_image.h  packed_image_convert.cc  (+6 more)
tools/: CMakeLists.txt  args.h  build_cleaner.py  build_stats.py  butteraugli_main.cc  check_author.py  cjpeg_hdr.cc  cjxl_fuzzer.cc  cjxl_main.cc  cmdline.cc  cmdline.h  codec_config.h  color_encoding_fuzzer.cc  decode_and_encode.cc  decode_basic_info_fuzzer.cc  djxl_fuzzer.cc  djxl_fuzzer_test.cc  djxl_main.cc  fields_fuzzer.cc  file_io.cc  file_io.h  fuzzer_corpus.cc  fuzzer_stub.cc  icc_codec_fuzzer.cc  jxl_emcc.cc  jxl_from_tree.cc  jxlinfo.c  libjxl_test.c  ossfuzz-build.sh  progressive_sizes.sh  rans_fuzzer.cc  roundtrip_test.sh  set_from_bytes_fuzzer.cc  speed_stats.cc  ssimulacra.cc  ssimulacra.h  ssimulacra_main.cc  transforms_fuzzer.cc  xyb_range.cc
(+495 files in other folders)
